--- a/public/css/style.css
+++ b/public/css/style.css
@@ -662,7 +662,7 @@ body {
 /* Flexigrid */
 
 .flexigrid{
-	margin: -3em -3.5em;
+/* 	margin: -3em -3.5em; */
 }
 
 /* Formulaire de connexion */
@@ -930,7 +930,7 @@ body {
 
 #menu-connecte li a{
     display: block;
-	background: #0F77A6;
+	background: #1d8eb6;
 	padding: 5px 12px;
 	text-decoration: none;
 	border-right: 1px solid white;
@@ -944,7 +944,7 @@ body {
 }
 
 #menu-connecte li a:hover{
-    background: #1A4473
+    background: #09699b;
 }
 
 #menu-connecte li ul{
@@ -962,14 +962,14 @@ body {
 
 #menu-connecte li ul li a{
     width: auto;
-	background: #0F77A6;
+	background: #1d8eb6;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
 	border-radius: 0px 0px;
 }
 
 #menu-connecte li ul li a:hover{
-    background: #7F1616
+    background: #09699b;
 }
 	
 /* Reponse test motivation */
