--- a/application/views/scripts/formation/getformationdata.phtml
+++ b/application/views/scripts/formation/getformationdata.phtml
@@ -18,6 +18,7 @@
 <div id="info_formation">
 	<h5 style="border-bottom : 1px solid">Formation</h5><br />
 	<p id="type_formation"><?php echo $this->type_formation; ?></p><br />
+	<p id="lieu_formation"><?php echo $this->code_postal.", ".$this->ville?></p><br />
 	<h5 style="border-bottom : 1px solid">Choisissez un créneau horaire</h5><br />	
 	</div>
 <div id="heure_formation">
