--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -21,6 +21,7 @@ $user = new Zend_Session_Namespace('user');?>
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery.jcountdown1.3.2.js"></script>	
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/timepicker.js"></script>	
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/fullcalendar.js"></script>  
+		<script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
 	</head>
 	
 	<body class="page_sommaire">
