--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,13 +253,13 @@ body {
 }
 
 #footer_content_left {
-	width: 40.5em; /* 482px */
+	width: 45.5em; /* 482px */
 	float: left;
 }
 
 #footer_content_right {
 	text-align: right;
-	width: 40.5em; /* 482px */
+	width: 36.5em; /* 482px */
 	float: left;
 }
 
@@ -398,624 +398,31 @@ body {
 	border: none;
 }
 
-/* Ajout partie intranet */
-
-.h5_modifie{
-	color : #0f77a6;	
-	border-bottom: #0f77a6 solid 1px;
-	margin-bottom: 1em;
-}
-
-/* css for timepicker */
-.ui-timepicker-div .ui-widget-header{ margin-bottom: 8px; }
-.ui-timepicker-div dl{ text-align: left; }
-.ui-timepicker-div dl dt{ height: 25px; }
-.ui-timepicker-div dl dd{ margin: -25px 0 10px 65px; }
-.ui-timepicker-div td { font-size: 90%; }
-
-#jsmin a.download{display:block;padding:10px 20px;font-size:20px;font-weight:bold;text-decoration:none;text-align:center;color:#fff;background:#1d9f2f;-moz-border-radius:8px;}
-
-.tooltip{width:200px;margin:0;padding:5px;font-size:11px;color:#666;background:#fff;border:5px solid #ccc;}
-.tooltip p{margin:0;text-align:justify;}
-#tooltip_1{z-index:100000;}
-#tooltip_2{height:300px;width:300px;background:#fff;border-color:#e66;}
-#tooltip_3{background:#fff;border-color:#8c6;}
-
-
-.flexigrid div.fbutton .delete { background: url('/../images/editdelete-icone-7500-16.png') no-repeat center left; }
-.flexigrid div.fbutton .edit { background: url('../images/editeurs-forfait-icone-8056-16.png') no-repeat center left; }
-.flexigrid div.fbutton .add { background : url('../images/ajouter-modifier-icone-9159-16.png') no-repeat center left;}
-.flexigrid div.fbutton .relier { background : url('../images/connecter-en-creant-icone-8226-16.png') no-repeat center left; }
-.flexigrid div.fbutton .add_user { background : url('../images/ajouter-modifier-icone-9159-16.png') no-repeat center left;}
-.flexigrid div.fbutton .detail { background : url('../images/loupe.png') no-repeat center left;}
-.flexigrid div.fbutton .valider { background : url('../images/icone_ok_16.png') no-repeat center left;}
-.flexigrid div.fbutton .entretien { background : url('../images/bulle-chat-parole-parler-icone-4615-16.png') no-repeat center left;}
-.flexigrid div.fbutton .refuser { background : url('../images/icone_erreur_16.png') no-repeat center left;}
-
-/* Sidebar */
-
-#sidebar{
-	float: right;
-	margin-top: -25em;
-}
-
-#sidebar-formateur{
-	float: right;
-	margin-top: -25em;
-	margin-right: 5em;
-}
-/* Actions administrateur */
-
-.block-left{
-	float: left;
-	margin-top: 1em;
-	width: 20em;
-}
-
-.block-right{
-	margin-left: 15em;
-	margin-top: 2em;
-	width: 20em;
-}
-
-.block-top{
-	margin-bottom: 5em;
-}
-
-.block-bottom{
-	margin-top : 1em;
-}
-
-.block-left-bottom{
-	margin-top : -4em;
-	width: 20em;
-}
-
-.block-right-bottom{
-	float: left;
-	margin-top : -3em;
-	width: 20em;
-}
-
-#autre_action{
-	padding-bottom: 1em;
-}
-
-#img_utilisateur{
-	margin-bottom : -3em;
-}
-
-/* Actions formateur */
-
-.block-left-formateur{
-	margin-top: 1em;
-	margin-left : 5em;
-	width: 20em;
-}
-
-.block-right-formateur{
-	margin-left: 25em;
-	margin-top: -10.95em;
-	width: 20em;
-}
-
-.block-top-formateur{
-	margin-bottom: 5em;
-}
-
-.block-bottom-formateur{
-	margin-top : 1em;
-}
-
-.block-left-bottom-formateur{
-	width: 20em;
-	margin-left	: 5em;
-	margin-bottom: 5em;
-}
-
-#action_formateur{
-	margin-top: 5em;
-}
-
-/*Formulaire de modification des info*/
-
-#titre_modifier > h5{
-	color : #0f77a6;	
-}
-
-#titre_modifier{
-	border-bottom: #0f77a6 solid 1px;
-}
-
-#label-left{
-	float: left;
-}
-
-#label-left > label, #input-right > input{
-	display : block;
-}
-
-#label-left > label{
-	margin-top: 0.9em;
-}
-
-#input-right{
-	margin-left: 15em;
-	margin-top : 2.3em;
-}
-
-#input-right > input{
-	margin-top : 1em;
-}
-
-#nom{
-	margin-top : 2.4em;
-}
-
-.errors_modifier{
-	float : right;
-}
-
-#span-right{
-	margin-right : 22em;
-}
-
-#info_nom{ margin-top : -17em}
-#info_prenom{ margin-top : -15em}
-#info_adresse{ margin-top : -12.6em}
-#info_codePostal{ margin-top : -8.5em}
-#info_ville{ margin-top : -5.9em}
-#info_telephone{ margin-top : -3.5em}
-#info_email { margin-top : -1.5em}
-
-#submit_modifier{
-	margin-left: 5.4em;
-	margin-top: 3em;
-}
-
-/* Changement de mot de passe */
-
-#label_changePassword{
-	float : left;
-	margin-right: 5em;
-}
-
-#label_changePassword > label{
-	margin-top: 1em;
-	display: block;
-}
-
-#input_changePassword{
-	margin-top: 2.4em;
-}
-
-#input_changePassword > input{
-	margin-top: 1em;
-	display: block;
-}
-
-#submit_changePassword{
-	margin-top: 2em;
-	margin-bottom: 2em;
-	margin-left: 1em;
-}
-
-/*FAQ*/
-
-.question-faq{
-	font-style: italic;
-	cursor: pointer;
-	font-size: 14px;
-	margin-bottom: 1em;
-}
-
-.reponse-faq{
-	margin-left : 1em;
-	font-size: 14px;
-	margin-bottom: 1em;
-	border : 1px solid #AAA;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px 4px;
-	background-color: #F5F5F5;
-	padding : 1em;
-}
-
-
-#question, #reponse{
-	width : 22em;
-	height : 10em;
-}
-
-.separateur{
-	text-align: center;
-	width: 20em;
-	margin: 3em;
-	height: 1em;
-	border-bottom: 1px solid #0f77a6;
-	margin-left: 25em;
-	margin-top: 2em;
-}
-
-#active_gestion{
-	float: left;
-	margin: 1em;
-	margin-right: -1em;
-}
-
-#categorie_gestion{
-	float: left;
-	margin: 1em;
-}
-
-#reponse_gestion{
-	float: right;
-	margin-top: 1em;
-	margin-right: 20.5em;
-}
-
-#question_gestion{
-	float: left;
-	margin-left: 1em;
-	margin-top: 1em
-}
-
-/* Flexigrid */
-
-.flexigrid{
-/* 	margin: -3em -3.5em; */
-}
-
-/* Formulaire de connexion */
-#label_login{
-	float : left;
-}
-
-#label_login > label{
-	display: block;
-	margin-top: 1em;
-}
-
-#input_login{
-	margin-right: 50em;
-	float: right;
-	margin-top: 0.39em;
-}
-
-#input_login > input{
-	display: block;
-	margin-top: 1em;
-}
-
-#submit_login{
-	margin-top: 5em;
-	margin-left: 12.5em;
-}
-
-/* Modification des dialogs */
-.ui-widget{
-	font-family: Arial, Helvetica, sans-serif; 
-	color:#7a7a7a;
-	font-size: 0.90em;
-}
-
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
-	font-family: Arial, Helvetica, sans-serif; 
-	color:#7a7a7a;
-	font-size: 0.85em;
-}
-
-/*Certification : ajouter une question*/
-.ajouter_question_label{
-	vertical-align: top;
-}
-
-#question{
-	width : 40em;
-	height : 8em;
-}
-
-.reponse{
-	width : 40em;	
-	height : 8em;
-	margin-left : 0.41em;
-	margin-bottom : 0.5em;
-}
-
-#reponse{
-	width : 40em;	
-	height : 8em;
-}
-
-.reponse_juste{
-	margin-right : 1em;
-	margin-left: 1em;
-}
-
-#ajouter_reponse, #ajouter_reponse:hover{
-	text-decoration: none;
-	cursor: pointer;
-	margin-left : 6em;
-}
-
-#reponse_ouverte{
-	margin-left : 9em;
-	margin-right : 1em;
-}
-
-#valider_question_reponse{
-	margin-top : 1em;
-}	
-
-/*Certification : lier une question*/
-
-#question_obligatoire_lier{
-	margin-right: 1em;
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-#enregistrer_lier{
-	margin-bottom: 2em; 
-}
-
-/* Formulaire edition utilisateur */
-#label_edit_user{
-	float : left;
-	margin-left : 1em;
-}
-
-#label_edit_user > label{
-	display: block;
-	margin-top: 1em;
-}
-
-#input_edit_user{
-	margin-right: 5em;
-	float: right;
-}
-
-#input_edit_user > input, #input_edit_user > select{
-	display: block;
-	margin-top: 1.2em;
-	width: 20em;
-}
-
-#nom_groupe > option{
-	text-align: center;
-}
-
-/* Commande de formation */
-#slider{
-	width : 25em;
-	margin-left: 35em;
-	margin-top : -2.5em;
-}
-
-.div_checkbox{
-	float: right;
-	margin-right: 20em;
-	margin-top: -0.3em;
-}
-
-#cgv{
-	margin-right: 1em;
-}
-
-/* Certifications */
-
-#label_certification{
-	float : left;
-	margin-left : 1em;
-}
-
-#label_certification > label{
-	display: block;
-	margin-top: 1em;
-}
-
-#input_certification{
-	margin-right: 5em;
-	float: right;
-}
-
-#input_certification > input{
-	display: block;
-	margin-top: 1.2em;
-	width: 20em;
-}
-
-/*Affichage des heures disponible pour les formateurs*/
-#heure_left{
-	float : left;
-}
-
-.heure_left{
-	margin-right : 5em;
-}
-
-#heure_right{
-	float : right;
-	margin-right : 20em;
-}
-
-.heure_right{
-	margin-right : 5em;
-}
-
-/*Passage de certification*/
-.reponse{
-	/* background: url("/../images/reponses.png") no-repeat scroll left bottom transparent; */
-	padding-bottom: 1em;
-}
-
-.reponse > label{
-	margin-left: 1em;
-}
-
-.reponse > input, reponse > option{
-	margin-left: 1em;
-	margin-top: 0.1em;
-}
-
-.enonce{
-	color : black;
-	/* background: url("/../images/quest_q_top.png") no-repeat scroll left bottom transparent; */
-	font-size: 16px;
-}
-
-.enonce-numero{
-	color : black;
-	float : right;
-	font-weight: normal;
-	font-size: 12px;
-	margin-right: 1em;	
-	vertical-align: center;
-}
-
-.enonce-question{
-	margin-left: 1em;
-}
-
-#nom_certification{
-	/* border-bottom: #0f77a6 solid 1px; */
-	margin-bottom: 2em;
-}
-
-#bouton_certification{
-	margin-top: 3em;
-	margin-left: 0.4em;
-}
-
-/* Parcour formateur */
-
-#contenaire_onglets{
-	margin-left : -0.5em;
-	margin-top: 5em;
-	width: 87.9em;
-	min-height: 21em;
-	border : none;
-}
-
-.etape_valide{
-	background : #98FB98;
-	outline: none; 
-}
-
-.etape{
-	display: inline-block;
-}
-
-#etapes{
-	margin-left: 25em;
-	margin-bottom: 2em;
-	margin-top: 2em;
-}
-
-/* Menu connecte */
-
-#menu_connecte{
-	width: 60em;
-	margin-bottom: 5em;
+/* sidebar navigation*/
+#navigation-content h2 {
+	margin-top: 40px;
 }
 
-#menu_onglet li{
-	float: left;
+#navigation-content ul {
+	margin: -1em 0 0 0;
+	padding: 0;
 	list-style: none;
 }
 
-#menu-connecte{
-	margin: 0;
-	margin-bottom: 6em;
-	margin-top: -1em;
-	padding: 0;
-	position: relative;
-	z-index: 1;
+#navigation-content ul li {
+	border-bottom: #d1d1d1 dashed 0.1em;
 }
 
-#menu-connecte li{
-    float: left;
-	list-style: none;
-}
-
-#menu-connecte li a{
-    display: block;
-	background: #1d8eb6;
-	padding: 5px 12px;
+#navigation-content ul li a {
+	color: #2F8DB8;
 	text-decoration: none;
-	border-right: 1px solid white;
-	width: auto;
-	color: #FFFFFF; 
-	white-space: nowrap;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px 4px;    
-	cursor: pointer;
+	line-height: 2.5em;
+	background: url(../images/marker.gif) top left no-repeat;
+	background-position: 0 5px;
+	padding-left: 19px;
 }
 
-#menu-connecte li a:hover{
-    background: #09699b;
-}
-
-#menu-connecte li ul{
-    margin: 0;
-	padding: 0;
-	position: absolute;
-	visibility: hidden;
-	border-top: 1px solid white;
-}
-
-#menu-connecte li ul li{
-    float: none;
-	display: inline;
-}
-
-#menu-connecte li ul li a{
-    width: auto;
-	background: #1d8eb6;
-	-moz-border-radius: 0px;
-	-webkit-border-radius: 0px;
-	border-radius: 0px 0px;
-}
-
-#menu-connecte li ul li a:hover{
-    background: #09699b;
-}
-	
-/* Reponse test motivation */
-.question_motivation{
-	font-style: italic;
-	cursor: pointer;
-	font-size: 14px;
-	margin-bottom: 1em;
-}
-
-.reponse_motivation{
-	margin-left : 1em;
-	font-size: 14px;
-	margin-bottom: 1em;
-	border : 1px solid #AAA;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px 4px;
-	background-color: #F5F5F5;
-	padding : 1em;
-}
-
-
-.div_checkbox_parcour{
-	float: right;
-	margin-right: 35em;
-	margin-top: -0.3em;
-}
-
-#select_jour_parcour{
-	font-size: 1.1em;
-}
-
-/* Affichage entretien skype admin */
-#dispo_left{
-	float : left;
-	margin-right: 5em;
+#navigation-content ul li a:hover {
+	text-decoration: underline;
 }
 
